fixed css bug main from DOM overflow

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -30,7 +30,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 main {
-	height: 100vh;
+	/* height: 100vh; */
 	width: 100vw;
 
 	/* z-index: 1; */
